--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <h1>Things To-Do</h1>
       <div id="taskList"></div>
       <div id="footer">
-        <a href="#" id="createTask">create a task</a> |
+        <button id='saveTasks'>Save to server</button> |
+        <button id='createTask'>Create a task</button> |
+        <a href="index.html">new task list</a> |
         <a href="SpecRunner.html">run testsuite</a>
       </div>
     </div>
