--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>Things To-Do</h1>
       <div id="taskList"></div>
       <div id="footer">
-        <button id='saveTasks'>Save to server</button> |
+        <button id='saveTasks'>Save tasks</button> |
         <button id='createTask'>Create a task</button> |
-        <a href="index.html">new task list</a> |
+        <button id='clearTasks'>Clear tasks</button> |
         <a href="SpecRunner.html">run testsuite</a>
       </div>
     </div>
